@@ -1,3 +1,4 @@
+	* add missing add_files overload to the python bindings
 	* improve error handling in http gunzip
 	* fix debug logging for banning web seeds
 	* improve support for de-selected files in full allocation mode
